--- a/index.html
+++ b/index.html
@@ -27,27 +27,30 @@
                 <p>Traemos información en tiempo real de las casas de cambio y en las monedas más importantes del mundo</p>
             </div>
             <section class="main-tables-contaier">
-                <div>
-                    <p>Monedas</p>
-                    <div>
+                <div class="main-currency-table">
+                    <p class="currecy-table--title">Monedas</p>
+                    <div class="currency-table--container">
                         <table>
                             <tr>
-                                <td>Bitcoin</td>
-                                <td>$1.96</td>
+                                <td class="table__top-left">Bitcoin</td>
+                                <td class="table__top-rigth table__rigth">$1.96</td><span></span>
                             </tr>
                             <tr>
-                                <td>Ethereum</td>
-                                <td>$0.07</td>
+                                <td>Ethereum</td><span></span>
+                                <td class="table__rigth">$0.07</td>
                             </tr>
                             <tr>
-                                <td>Ripple</td>
-                                <td>$2.17</td>
+                                <td>Ripple</td><span></span>
+                                <td class="table__rigth">$2.17</td>
                             </tr>
                             <tr>
-                                <td>Stellar</td>
-                                <td>$4.96</td>
+                                <td class="table__button-left">Stellar</td><span></span>
+                                <td class="table__botton-right">$4.96</td>
                             </tr>
                         </table>
+                    </div>
+                    <div class="currency-table--date">
+                        <p><b>Actualizado:</b> 19 julio 24:45</p>
                     </div>
                 </div>
             </section>
