Estilos de la tabla moneda

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <table>
                             <tr>
                                 <td class="table__top-left">Bitcoin</td>
-                                <td class="table__top-rigth table__rigth">$1.96</td><span></span>
+                                <td class="table__top-rigth table__rigth">$1.96 <span class="down"></span></td>
                             </tr>
                             <tr>
                                 <td>Ethereum</td><span></span>
