--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
                             </tr>
                             <tr>
                                 <td>Ethereum</td><span></span>
-                                <td class="table__rigth">$0.07</td>
+                                <td class="table__rigth">$0.07 <span class="up"></span></td>
                             </tr>
                             <tr>
                                 <td>Ripple</td><span></span>
-                                <td class="table__rigth">$2.17</td>
+                                <td class="table__rigth">$2.17 <span class="down2"></span></td>
                             </tr>
                             <tr>
                                 <td class="table__button-left">Stellar</td><span></span>
-                                <td class="table__botton-right">$4.96</td>
+                                <td class="table__botton-right">$4.96 <span class="down3"></span></td>
                             </tr>
                         </table>
                     </div>
