Tarjetas de beneficios

--- a/index.html
+++ b/index.html
@@ -65,7 +65,28 @@
                 <article class="product-detail--card">
                     <span class="clock"></span>
                     <p class="product--card-title">Tiempo real</p>
-                    <p class="prodduct--card-body">Nuestro API toma información minuto a minuto sobre las tasas que más determinan el comportamiento.</p>
+                    <p class="product--card-body">Nuestro API toma información minuto a minuto sobre las tasas que más determinan el comportamiento.</p>
+                </article>
+            </section>
+            <section class="product-cards--container2">
+                <article class="product-detail--card2">
+                    <span class="eye"></span>
+                    <p class="product--card-title2">No hay tasas escondidas</p>
+                    <p class="product--card-body2">Ni en la compra o al momento de exit, batabit siemprete muestra el costo real de lo que estás adquiriendo.</p>
+                </article>
+            </section>
+            <section class="product-cards--container3">
+                <article class="product-detail--card3">
+                    <span class="dollar"></span>
+                    <p class="product--card-title3">Compara monedas</p>
+                    <p class="product--card-body3">No más rumores, con Batabit sabrás el valor real de cada moneda en el mercado actual.</p>
+                </article>
+            </section>
+            <section class="product-cards--container4">
+                <article class="product-detail--card4">
+                    <span class="check"></span>
+                    <p class="product--card-title4">Información confiable</p>
+                    <p class="product--card-body4">Nuestras fuentes estan 100% verificadas y continuamos auditando su contenido míentras se actualizan.</p>
                 </article>
             </section>
         </section>
