--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 <article class="plans-container--card">
                     <p class="recommeded">Recomendado</p>
                     <div class="plan-info-container">
-                        <h3 class="plan-card-title">Pago Anual</h3>
+                        <h3 class="plan-card--title">Pago Anual</h3>
                         <p class="plan-card--price"><span>$</span> 99</p>
                         <p class="plan-card--saving"> * Ahorras $129 comparado al plan mensual.</p>
                         <button class="plan-card--ca">Escoger este <span></span></button>
