--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="header--title-container">
             <h1>La próxima revolución en el intercambio de criptomonedas</h1>
             <p>Batatabit te ayuda a navegar entre los diferentes precios y tendencías.</p>
-            <a href="#plans" class="header--button">Conoce nuestros planes <span></span></a>
+            <a href="" class="header--button">Conoce nuestros planes <span></span></a>
         </div>
     </header>
     <main>
@@ -44,13 +44,39 @@
                                 <td class="table__rigth">$2.17 <span class="down2"></span></td>
                             </tr>
                             <tr>
-                                <td class="table__button-left">Stellar</td><span></span>
-                                <td class="table__botton-right">$4.96 <span class="down3"></span></td>
+                                <td class="table__buttom-left">Stellar</td><span></span>
+                                <td class="table__bottom-rigth">$4.96 <span class="down3"></span></td>
                             </tr>
                         </table>
                     </div>
                     <div class="currency-table--date">
                         <p><b>Actualizado:</b> 19 julio 23:45</p>
+                    </div>
+                </div>
+                <div class="main-currency-table">
+                    <p class="currecy-table--title">Comisiones</p>
+                    <div class="currency-table--container">
+                        <table>
+                            <tr>
+                                <td class="table__top-left">Bitrade</td>
+                                <td class="table__top-rigth table__rigth">$12.96 </td>
+                            </tr>
+                            <tr>
+                                <td>Bitpreco</td><span></span>
+                                <td class="table__rigth">$13.07 </td>
+                            </tr>
+                            <tr>
+                                <td>Novadax</td><span></span>
+                                <td class="table__rigth">$13.15</span></td>
+                            </tr>
+                            <tr>
+                                <td class="table__buttom-left">Coinext</td><span></span>
+                                <td class="table__bottom-rigth">$14.96 </td>
+                            </tr>
+                        </table>
+                    </div>
+                    <div class="currency-table--date2">
+                        <p><b>Actualizado:</b> 19 julio 23:48</p>
                     </div>
                 </div>
             </section>
@@ -79,36 +105,62 @@
                 <article class="product-detail--card3">
                     <span class="dollar"></span>
                     <p class="product--card-title3">Compara monedas</p>
-                    <p class="product--card-body3">No más rumores, con Batabit sabrás el valor real de cada moneda en el mercado actual.</p>
+                    <p class="product--card-body3">No más rumores, con Batabit sabrás 
+                        el valor real de casa moneda en el mercado actual.</p>
                 </article>
             </section>
             <section class="product-cards--container4">
                 <article class="product-detail--card4">
                     <span class="check"></span>
-                    <p class="product--card-title4">Información confiable</p>
-                    <p class="product--card-body4">Nuestras fuentes estan 100% verificadas y continuamos auditando su contenido míentras se actualizan.</p>
+                    <p class="product--card-title4">Información Confiable</p>
+                    <p class="product--card-body4">Nuestras fuentes están 100% verificadas y 
+                        continuamos auditando su contenido mientras 
+                        se actualizan.</p>
                 </article>
             </section>
         </section>
         <section class="bitcoin-img-container">
-            <h2>Conócelo hoy.</h2>
-        </section>
-        <section id="plans" class="main-plans-container">
-            <div class="plans--title">
-                <h2>Escoge el plan que mejor se ajuste a ti.</h2>
-                <p>cualquier plan te da acceso completo a nuestra plataforma.</p>
-            </div>
-            <section class="Plans-container--slider">
-                <article class="plans-container--card">
-                    <p class="recommeded">Recomendado</p>
-                    <div class="plan-info-container">
-                        <h3 class="plan-card--title">Pago Anual</h3>
-                        <p class="plan-card--price"><span>$</span> 99</p>
-                        <p class="plan-card--saving"> * Ahorras $129 comparado al plan mensual.</p>
-                        <button class="plan-card--ca">Escoger este <span></span></button>
-                    </div>
-                </article>
-            </section>
+        <h2>Conócelo hoy.</h2>
+        <section>
+        <section>
+            <section id="plans" class="main-plans-container">
+                <div class="plans--title">
+                    <h2>Escoge el plan que mejor se ajuste a ti.</h2>
+                    <p>
+                       Cualquier plan te da acceso 
+                       completo a nuestra plataforma.
+                    </p>
+                </div>
+                <section class="plans-container--slider">
+                    <article class="plans-container--card">
+                        <div class="plan-info-container">
+                            <h3 class="plan-card--title">Pago Anual</h3>
+                            <p class="plan-card--price"><span>$</span> 99</p>
+                            <p class="plan-card--saving">* Ahorras $129 
+                                comparado al plan mensual. </p>
+                            <button class="plan-card--ca">Esoger este <span></span></button>
+                        </div>
+                    </article>
+                    <article class="plans-container--card">
+                        <p class="recommended">Recomendado</p>
+                        <div class="plan-info-container">
+                            <h3 class="plan-card--title">Pago Anual</h3>
+                            <p class="plan-card--price"><span>$</span> 99</p>
+                            <p class="plan-card--saving">* Ahorras $129 
+                                comparado al plan mensual. </p>
+                            <button class="plan-card--ca">Esoger este <span></span></button>
+                        </div>
+                    </article>
+                    <article class="plans-container--card">
+                        <div class="plan-info-container">
+                            <h3 class="plan-card--title">Pago Anual</h3>
+                            <p class="plan-card--price"><span>$</span> 99</p>
+                            <p class="plan-card--saving">* Ahorras $129 
+                                comparado al plan mensual. </p>
+                            <button class="plan-card--ca">Esoger este <span></span></button>
+                        </div>
+                    </article>
+                </section>
         </section>
     </main>
     <footer></footer>
